lyparser/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    GENERATOR
    DEFAULT
    BNOT
    DOT
    CASE
    PRIVATE
    COLON
    NAMESPACE
    CIRCUMFLEXUS
    AMPER
    IMPORT
    STRUCT
    AS
    CLASS
    SWITCH
    PUBLIC

Grammar

Rule 0     S' -> program
Rule 1     program -> input
Rule 2     input -> op
Rule 3     input -> input op
Rule 4     input -> <empty>
Rule 5     op -> expr SEMICOLON
Rule 6     op -> stmt SEMICOLON
Rule 7     stmt -> def_stmt
Rule 8     stmt -> if_stmt
Rule 9     stmt -> call_stmt
Rule 10    stmt -> while_stmt
Rule 11    stmt -> for_stmt
Rule 12    stmt -> assign
Rule 13    if_stmt -> IF expr THEN code_block elseifs_stmts else_stmt
Rule 14    if_stmt -> IF LPAR expr RPAR code_block elseifs_stmts else_stmt
Rule 15    elseifs_stmts -> elseifs_stmts elseif_stmt
Rule 16    elseifs_stmts -> elseif_stmt
Rule 17    elseifs_stmts -> <empty>
Rule 18    elseif_stmt -> ELSEIF expr THEN code_block
Rule 19    elseif_stmt -> ELSEIF LPAR expr RPAR code_block
Rule 20    else_stmt -> ELSE THEN code_block
Rule 21    else_stmt -> ELSE code_block
Rule 22    while_stmt -> WHILE LPAR expr RPAR code_block
Rule 23    while_stmt -> WHILE LPAR expr RPAR THEN code_block
Rule 24    for_stmt -> FOR LPAR assign SEMICOLON expr SEMICOLON expr RPAR code_block
Rule 25    for_stmt -> FOR LPAR expr SEMICOLON expr SEMICOLON expr RPAR THEN code_block
Rule 26    def_stmt -> DEF ID LPAR var_prototypes_list RPAR TYPEIS type THEN code_block
Rule 27    def_stmt -> DEF ID LPAR var_prototypes_list RPAR TYPEIS type code_block
Rule 28    var_prototypes_list -> var_prototypes_list COMMA var_prototype
Rule 29    var_prototypes_list -> var_prototype
Rule 30    var_prototype -> ID TYPEIS type
Rule 31    call_stmt -> ID LPAR RPAR
Rule 32    call_stmt -> ID LPAR args_list RPAR
Rule 33    assign -> ID TYPEIS type EQUAL expr
Rule 34    assign -> assign_left EQUAL expr
Rule 35    assign -> assign_left PE expr
Rule 36    assign -> assign_left ME expr
Rule 37    assign -> assign_left SE expr
Rule 38    assign -> assign_left DSE expr
Rule 39    assign -> assign_left AE expr
Rule 40    assign -> assign_left DAE expr
Rule 41    assign_left -> ID
Rule 42    assign_left -> index_expr
Rule 43    args_list -> expr
Rule 44    args_list -> args_list COMMA expr
Rule 45    expr -> par_expr
Rule 46    expr -> test
Rule 47    expr -> return_expr
Rule 48    expr -> index_expr
Rule 49    index_expr -> ID LSQB expr RSQB
Rule 50    test -> test AND cmp
Rule 51    test -> test OR cmp
Rule 52    test -> cmp
Rule 53    cmp -> cmp LT cmp_expr
Rule 54    cmp -> cmp GT cmp_expr
Rule 55    cmp -> cmp LE cmp_expr
Rule 56    cmp -> cmp GE cmp_expr
Rule 57    cmp -> cmp NE cmp_expr
Rule 58    cmp -> cmp DEQUAL cmp_expr
Rule 59    cmp -> cmp_expr
Rule 60    cmp_expr -> or
Rule 61    or -> or BOR xor
Rule 62    or -> xor
Rule 63    xor -> xor BXOR and
Rule 64    xor -> and
Rule 65    and -> and BAND shift
Rule 66    and -> shift
Rule 67    shift -> and SHIFTLEFT shift
Rule 68    shift -> and SHIFTRIGTH shift
Rule 69    shift -> arith
Rule 70    par_expr -> LPAR arith RPAR
Rule 71    arith -> arith PLUS term
Rule 72    arith -> arith MINUS term
Rule 73    arith -> term
Rule 74    term -> term MUL factor
Rule 75    term -> term DIV factor
Rule 76    term -> term MOD factor
Rule 77    term -> term POW factor
Rule 78    term -> term DIV2 factor
Rule 79    term -> factor
Rule 80    factor -> atom
Rule 81    factor -> EMARK atom
Rule 82    factor -> MINUS atom
Rule 83    factor -> PLUS atom
Rule 84    factor -> NOT atom
Rule 85    atom -> primary
Rule 86    atom -> call_stmt
Rule 87    primary -> ID
Rule 88    primary -> NUMBER
Rule 89    primary -> FLOAT
Rule 90    primary -> STRING
Rule 91    primary -> list_def
Rule 92    list_def -> LSQB RSQB
Rule 93    list_def -> LSQB primary_list RSQB
Rule 94    primary_list -> primary
Rule 95    primary_list -> primary_list COMMA primary
Rule 96    type -> TINT
Rule 97    type -> TLONG
Rule 98    type -> TFLOAT
Rule 99    type -> ARRAY
Rule 100   type -> TUPLE
Rule 101   type -> CINT
Rule 102   type -> CLONG
Rule 103   type -> CFLOAT
Rule 104   code_block -> LBRACE input RBRACE
Rule 105   return_expr -> RETURN test

Terminals, with rules where they appear

AE                   : 39
AMPER                : 
AND                  : 50
ARRAY                : 99
AS                   : 
BAND                 : 65
BNOT                 : 
BOR                  : 61
BXOR                 : 63
CASE                 : 
CFLOAT               : 103
CINT                 : 101
CIRCUMFLEXUS         : 
CLASS                : 
CLONG                : 102
COLON                : 
COMMA                : 28 44 95
DAE                  : 40
DEF                  : 26 27
DEFAULT              : 
DEQUAL               : 58
DIV                  : 75
DIV2                 : 78
DOT                  : 
DSE                  : 38
ELSE                 : 20 21
ELSEIF               : 18 19
EMARK                : 81
EQUAL                : 33 34
FLOAT                : 89
FOR                  : 24 25
GE                   : 56
GENERATOR            : 
GT                   : 54
ID                   : 26 27 30 31 32 33 41 49 87
IF                   : 13 14
IMPORT               : 
LBRACE               : 104
LE                   : 55
LPAR                 : 14 19 22 23 24 25 26 27 31 32 70
LSQB                 : 49 92 93
LT                   : 53
ME                   : 36
MINUS                : 72 82
MOD                  : 76
MUL                  : 74
NAMESPACE            : 
NE                   : 57
NOT                  : 84
NUMBER               : 88
OR                   : 51
PE                   : 35
PLUS                 : 71 83
POW                  : 77
PRIVATE              : 
PUBLIC               : 
RBRACE               : 104
RETURN               : 105
RPAR                 : 14 19 22 23 24 25 26 27 31 32 70
RSQB                 : 49 92 93
SE                   : 37
SEMICOLON            : 5 6 24 24 25 25
SHIFTLEFT            : 67
SHIFTRIGTH           : 68
STRING               : 90
STRUCT               : 
SWITCH               : 
TFLOAT               : 98
THEN                 : 13 18 20 23 25 26
TINT                 : 96
TLONG                : 97
TUPLE                : 100
TYPEIS               : 26 27 30 33
WHILE                : 22 23
error                : 

Nonterminals, with rules where they appear

and                  : 63 64 65 67 68
args_list            : 32 44
arith                : 69 70 71 72
assign               : 12 24
assign_left          : 34 35 36 37 38 39 40
atom                 : 80 81 82 83 84
call_stmt            : 9 86
cmp                  : 50 51 52 53 54 55 56 57 58
cmp_expr             : 53 54 55 56 57 58 59
code_block           : 13 14 18 19 20 21 22 23 24 25 26 27
def_stmt             : 7
else_stmt            : 13 14
elseif_stmt          : 15 16
elseifs_stmts        : 13 14 15
expr                 : 5 13 14 18 19 22 23 24 24 25 25 25 33 34 35 36 37 38 39 40 43 44 49
factor               : 74 75 76 77 78 79
for_stmt             : 11
if_stmt              : 8
index_expr           : 42 48
input                : 1 3 104
list_def             : 91
op                   : 2 3
or                   : 60 61
par_expr             : 45
primary              : 85 94 95
primary_list         : 93 95
program              : 0
return_expr          : 47
shift                : 65 66 67 68
stmt                 : 6
term                 : 71 72 73 74 75 76 77 78
test                 : 46 50 51 105
type                 : 26 27 30 33
var_prototype        : 28 29
var_prototypes_list  : 26 27 28
while_stmt           : 10
xor                  : 61 62 63

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . input
    (2) input -> . op
    (3) input -> . input op
    (4) input -> .
    (5) op -> . expr SEMICOLON
    (6) op -> . stmt SEMICOLON
    (45) expr -> . par_expr
    (46) expr -> . test
    (47) expr -> . return_expr
    (48) expr -> . index_expr
    (7) stmt -> . def_stmt
    (8) stmt -> . if_stmt
    (9) stmt -> . call_stmt
    (10) stmt -> . while_stmt
    (11) stmt -> . for_stmt
    (12) stmt -> . assign
    (70) par_expr -> . LPAR arith RPAR
    (50) test -> . test AND cmp
    (51) test -> . test OR cmp
    (52) test -> . cmp
    (105) return_expr -> . RETURN test
    (49) index_expr -> . ID LSQB expr RSQB
    (26) def_stmt -> . DEF ID LPAR var_prototypes_list RPAR TYPEIS type THEN code_block
    (27) def_stmt -> . DEF ID LPAR var_prototypes_list RPAR TYPEIS type code_block
    (13) if_stmt -> . IF expr THEN code_block elseifs_stmts else_stmt
    (14) if_stmt -> . IF LPAR expr RPAR code_block elseifs_stmts else_stmt
    (31) call_stmt -> . ID LPAR RPAR
    (32) call_stmt -> . ID LPAR args_list RPAR
    (22) while_stmt -> . WHILE LPAR expr RPAR code_block
    (23) while_stmt -> . WHILE LPAR expr RPAR THEN code_block
    (24) for_stmt -> . FOR LPAR assign SEMICOLON expr SEMICOLON expr RPAR code_block
    (25) for_stmt -> . FOR LPAR expr SEMICOLON expr SEMICOLON expr RPAR THEN code_block
    (33) assign -> . ID TYPEIS type EQUAL expr
    (34) assign -> . assign_left EQUAL expr
    (35) assign -> . assign_left PE expr
    (36) assign -> . assign_left ME expr
    (37) assign -> . assign_left SE expr
    (38) assign -> . assign_left DSE expr
    (39) assign -> . assign_left AE expr
    (40) assign -> . assign_left DAE expr
    (53) cmp -> . cmp LT cmp_expr
    (54) cmp -> . cmp GT cmp_expr
    (55) cmp -> . cmp LE cmp_expr
    (56) cmp -> . cmp GE cmp_expr
    (57) cmp -> . cmp NE cmp_expr
    (58) cmp -> . cmp DEQUAL cmp_expr
    (59) cmp -> . cmp_expr
    (41) assign_left -> . ID
    (42) assign_left -> . index_expr
    (60) cmp_expr -> . or
    (61) or -> . or BOR xor
    (62) or -> . xor
    (63) xor -> . xor BXOR and
    (64) xor -> . and
    (65) and -> . and BAND shift
    (66) and -> . shift
    (67) shift -> . and SHIFTLEFT shift
    (68) shift -> . and SHIFTRIGTH shift
    (69) shift -> . arith
    (71) arith -> . arith PLUS term
    (72) arith -> . arith MINUS term
    (73) arith -> . term
    (74) term -> . term MUL factor
    (75) term -> . term DIV factor
    (76) term -> . term MOD factor
    (77) term -> . term POW factor
    (78) term -> . term DIV2 factor
    (79) term -> . factor
    (80) factor -> . atom
    (81) factor -> . EMARK atom
    (82) factor -> . MINUS atom
    (83) factor -> . PLUS atom
    (84) factor -> . NOT atom
    (85) atom -> . primary
    (86) atom -> . call_stmt
    (87) primary -> . ID
    (88) primary -> . NUMBER
    (89) primary -> . FLOAT
    (90) primary -> . STRING
    (91) primary -> . list_def
    (92) list_def -> . LSQB RSQB
    (93) list_def -> . LSQB primary_list RSQB

  ! shift/reduce conflict for LPAR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for DEF resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for EMARK resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for LSQB resolved as shift
    $end            reduce using rule 4 (input -> .)
    LPAR            shift and go to state 2
    RETURN          shift and go to state 4
    ID              shift and go to state 31
    DEF             shift and go to state 11
    IF              shift and go to state 33
    WHILE           shift and go to state 8
    FOR             shift and go to state 23
    EMARK           shift and go to state 10
    MINUS           shift and go to state 14
    PLUS            shift and go to state 16
    NOT             shift and go to state 41
    NUMBER          shift and go to state 32
    FLOAT           shift and go to state 3
    STRING          shift and go to state 22
    LSQB            shift and go to state 30

  ! LPAR            [ reduce using rule 4 (input -> .) ]
  ! RETURN          [ reduce using rule 4 (input -> .) ]
  ! ID              [ reduce using rule 4 (input -> .) ]
  ! DEF             [ reduce using rule 4 (input -> .) ]
  ! IF              [ reduce using rule 4 (input -> .) ]
  ! WHILE           [ reduce using rule 4 (input -> .) ]
  ! FOR             [ reduce using rule 4 (input -> .) ]
  ! EMARK           [ reduce using rule 4 (input -> .) ]
  ! MINUS           [ reduce using rule 4 (input -> .) ]
  ! PLUS            [ reduce using rule 4 (input -> .) ]
  ! NOT             [ reduce using rule 4 (input -> .) ]
  ! NUMBER          [ reduce using rule 4 (input -> .) ]
  ! FLOAT           [ reduce using rule 4 (input -> .) ]
  ! STRING          [ reduce using rule 4 (input -> .) ]
  ! LSQB            [ reduce using rule 4 (input -> .) ]

    and                            shift and go to state 1
    par_expr                       shift and go to state 6
    def_stmt                       shift and go to state 7
    primary                        shift and go to state 26
    assign_left                    shift and go to state 9
    cmp_expr                       shift and go to state 17
    xor                            shift and go to state 12
    list_def                       shift and go to state 13
    program                        shift and go to state 15
    factor                         shift and go to state 5
    test                           shift and go to state 18
    input                          shift and go to state 19
    arith                          shift and go to state 20
    index_expr                     shift and go to state 21
    call_stmt                      shift and go to state 24
    return_expr                    shift and go to state 25
    stmt                           shift and go to state 27
    for_stmt                       shift and go to state 28
    atom                           shift and go to state 29
    term                           shift and go to state 34
    if_stmt                        shift and go to state 35
    expr                           shift and go to state 36
    or                             shift and go to state 37
    while_stmt                     shift and go to state 39
    shift                          shift and go to state 40
    op                             shift and go to state 42
    assign                         shift and go to state 38
    cmp                            shift and go to state 43

state 1

    (64) xor -> and .
    (65) and -> and . BAND shift
    (67) shift -> and . SHIFTLEFT shift
    (68) shift -> and . SHIFTRIGTH shift

    BXOR            reduce using rule 64 (xor -> and .)
    BOR             reduce using rule 64 (xor -> and .)
    LT              reduce using rule 64 (xor -> and .)
    GT              reduce using rule 64 (xor -> and .)
    LE              reduce using rule 64 (xor -> and .)
    GE              reduce using rule 64 (xor -> and .)
    NE              reduce using rule 64 (xor -> and .)
    DEQUAL          reduce using rule 64 (xor -> and .)
    AND             reduce using rule 64 (xor -> and .)
    OR              reduce using rule 64 (xor -> and .)
    SEMICOLON       reduce using rule 64 (xor -> and .)
    THEN            reduce using rule 64 (xor -> and .)
    RPAR            reduce using rule 64 (xor -> and .)
    COMMA           reduce using rule 64 (xor -> and .)
    RSQB            reduce using rule 64 (xor -> and .)
    BAND            shift and go to state 44
    SHIFTLEFT       shift and go to state 46
    SHIFTRIGTH      shift and go to state 45


state 2

    (70) par_expr -> LPAR . arith RPAR
    (71) arith -> . arith PLUS term
    (72) arith -> . arith MINUS term
    (73) arith -> . term
    (74) term -> . term MUL factor
    (75) term -> . term DIV factor
    (76) term -> . term MOD factor
    (77) term -> . term POW factor
    (78) term -> . term DIV2 factor
    (79) term -> . factor
    (80) factor -> . atom
    (81) factor -> . EMARK atom
    (82) factor -> . MINUS atom
    (83) factor -> . PLUS atom
    (84) factor -> . NOT atom
    (85) atom -> . primary
    (86) atom -> . call_stmt
    (87) primary -> . ID
    (88) primary -> . NUMBER
    (89) primary -> . FLOAT
    (90) primary -> . STRING
    (91) primary -> . list_def
    (31) call_stmt -> . ID LPAR RPAR
    (32) call_stmt -> . ID LPAR args_list RPAR
    (92) list_def -> . LSQB RSQB
    (93) list_def -> . LSQB primary_list RSQB

    EMARK           shift and go to state 10
    MINUS           shift and go to state 14
    PLUS            shift and go to state 16
    NOT             shift and go to state 41
    ID              shift and go to state 49
    NUMBER          shift and go to state 32
    FLOAT           shift and go to state 3
    STRING          shift and go to state 22
    LSQB            shift and go to state 30

    term                           shift and go to state 34
    arith                          shift and go to state 47
    call_stmt                      shift and go to state 48
    factor                         shift and go to state 5
    list_def                       shift and go to state 13
    primary                        shift and go to state 26
    atom                           shift and go to state 29

state 3

    (89) primary -> FLOAT .

    MUL             reduce using rule 89 (primary -> FLOAT .)
    DIV             reduce using rule 89 (primary -> FLOAT .)
    MOD             reduce using rule 89 (primary -> FLOAT .)
    POW             reduce using rule 89 (primary -> FLOAT .)
    DIV2            reduce using rule 89 (primary -> FLOAT .)
    PLUS            reduce using rule 89 (primary -> FLOAT .)
    MINUS           reduce using rule 89 (primary -> FLOAT .)
    BAND            reduce using rule 89 (primary -> FLOAT .)
    SHIFTLEFT       reduce using rule 89 (primary -> FLOAT .)
    SHIFTRIGTH      reduce using rule 89 (primary -> FLOAT .)
    BXOR            reduce using rule 89 (primary -> FLOAT .)
    BOR             reduce using rule 89 (primary -> FLOAT .)
    LT              reduce using rule 89 (primary -> FLOAT .)
    GT              reduce using rule 89 (primary -> FLOAT .)
    LE              reduce using rule 89 (primary -> FLOAT .)
    GE              reduce using rule 89 (primary -> FLOAT .)
    NE              reduce using rule 89 (primary -> FLOAT .)
    DEQUAL          reduce using rule 89 (primary -> FLOAT .)
    AND             reduce using rule 89 (primary -> FLOAT .)
    OR              reduce using rule 89 (primary -> FLOAT .)
    SEMICOLON       reduce using rule 89 (primary -> FLOAT .)
    THEN            reduce using rule 89 (primary -> FLOAT .)
    RPAR            reduce using rule 89 (primary -> FLOAT .)
    COMMA           reduce using rule 89 (primary -> FLOAT .)
    RSQB            reduce using rule 89 (primary -> FLOAT .)


state 4

    (105) return_expr -> RETURN . test
    (50) test -> . test AND cmp
    (51) test -> . test OR cmp
    (52) test -> . cmp
    (53) cmp -> . cmp LT cmp_expr
    (54) cmp -> . cmp GT cmp_expr
    (55) cmp -> . cmp LE cmp_expr
    (56) cmp -> . cmp GE cmp_expr
    (57) cmp -> . cmp NE cmp_expr
    (58) cmp -> . cmp DEQUAL cmp_expr
    (59) cmp -> . cmp_expr
    (60) cmp_expr -> . or
    (61) or -> . or BOR xor
    (62) or -> . xor
    (63) xor -> . xor BXOR and
    (64) xor -> . and
    (65) and -> . and BAND shift
    (66) and -> . shift
    (67) shift -> . and SHIFTLEFT shift
    (68) shift -> . and SHIFTRIGTH shift
    (69) shift -> . arith
    (71) arith -> . arith PLUS term
    (72) arith -> . arith MINUS term
    (73) arith -> . term
    (74) term -> . term MUL factor
    (75) term -> . term DIV factor
    (76) term -> . term MOD factor
    (77) term -> . term POW factor
    (78) term -> . term DIV2 factor
    (79) term -> . factor
    (80) factor -> . atom
    (81) factor -> . EMARK atom
    (82) factor -> . MINUS atom
    (83) factor -> . PLUS atom
    (84) factor -> . NOT atom
    (85) atom -> . primary
    (86) atom -> . call_stmt
    (87) primary -> . ID
    (88) primary -> . NUMBER
    (89) primary -> . FLOAT
    (90) primary -> . STRING
    (91) primary -> . list_def
    (31) call_stmt -> . ID LPAR RPAR
    (32) call_stmt -> . ID LPAR args_list RPAR
    (92) list_def -> . LSQB RSQB
    (93) list_def -> . LSQB primary_list RSQB

    EMARK           shift and go to state 10
    MINUS           shift and go to state 14
    PLUS            shift and go to state 16
    NOT             shift and go to state 41
    ID              shift and go to state 49
    NUMBER          shift and go to state 32
    FLOAT           shift and go to state 3
    STRING          shift and go to state 22
    LSQB            shift and go to state 30

    and                            shift and go to state 1
    term                           shift and go to state 34
    arith                          shift and go to state 20
    xor                            shift and go to state 12
    call_stmt                      shift and go to state 48
    shift                          shift and go to state 40
    atom                           shift and go to state 29
    list_def                       shift and go to state 13
    primary                        shift and go to state 26
    factor                         shift and go to state 5
    test                           shift and go to state 50
    or                             shift and go to state 37
    cmp_expr                       shift and go to state 17
    cmp                            shift and go to state 43

state 5

    (79) term -> factor .
